--- a/026_11_10_ft_bank.MD
+++ b/026_11_10_ft_bank.MD
@@ -11,16 +11,13 @@ Allowed functions: | strcmp
   - If the operation is **"withdrawal"**, you need to substract **modification** from **current_balance** and return the result
 
     The bank cannot accept a negative withdrawal. If **modification** is negative, return **modification**
-    <br/>
-    <br/>
+
   - If the operation is **"deposit"**, you need to add **modification** to **current_balance** and return the result.
   
     The bank cannot accept a negative deposit. If **modification** is negative, return **modification**
-    <br/>
-    <br/>
+
   - If the operation is **"check balance"**, you can ignore **modification** and simply return **current_balance**
-    <br/>
-    <br/>
+
   - If the operation is anything else, simply return **modification** argument
 
 * For each of these 4 cases, write a separate (sub)function which you will be calling from **"ft_bank"** function
@@ -31,6 +28,7 @@ Allowed functions: | strcmp
   ft_bank("deposit", 100, 400); //returns 500
   ft_bank("deposit", 100, -400); //returns -400
   ft_bank("check balance", -315, 45); //returns -315
+  ft_bank("CHECK BALANCE", -315, 45); //returns 45
   ft_bank("buy a monocycle", 360, 46); //returns 46
   ft_bank("feed a stray possum", 999, -32); //returns -32
   
