--- a/031_22_10_ft_ptr.MD
+++ b/031_22_10_ft_ptr.MD
@@ -12,7 +12,7 @@ int	main(void)
 	int	unitialized_integer;
 
 	ft_ptr(&unitialized_integer);
-	printf("Result: %d\n", unitialized_integer); // must print 8888
+	printf("Result: %d\n", unitialized_integer); // must print "Result: 8888"
 	return (0);
 }
 ```
